Fixed Style for menu on mobile and refactored JS

--- a/css/style.css
+++ b/css/style.css
@@ -155,11 +155,13 @@ body {
     background: #ffffff;
     border-radius: 5px;
     box-shadow: 1px 1px 0.5rem hsl(240, 4%, 57%);
-    width: 75%;
     height: 200px;
     position: absolute;
+    margin-left: auto;
+    margin-right: auto;
     top: 90px;
-    right: 35px;
+    left: 30px;
+    right: 30px;
     padding: 10px;
   }
   .header__menu__hidden {
